# LG_3D

./: .gitignore  .gitmodules  3D端面检测.aip  AGENTS.md  LG_3D.aip  LG_3D.back(21.3.1).aip  README.md  TEST_MODE_IMPLEMENTATION.md  move_detections.py  requirements.txt  tmp_uvicorn_detect.py  tmp_uvicorn_test.py  北科大-缺陷判级.aisln
UI/AnimationTutorial/: AnimationTutorial.qmlproject  CMakeLists.txt  main.qml  qmlmodules
UI/AnimationTutorial/content/: App.qml  AppBase.qml  AppCore.qml  CMakeLists.txt  DataShowRoot.qml  DefectShowLayout.qml  Junp.qml  MainLayout.qml  ModelShowLayout.qml
UI/AnimationTutorial/content/Api/: Ajax.qml  Api.qml  ApiConfig.qml  Api_Base.qml  Api_DataBase.qml  PortTool.qml
UI/AnimationTutorial/content/Base/: BackSvg.qml  BaseImage.qml  CheckRec.qml  CheckRecOld.qml  DateTime.qml  DefectDraw.qml  DefectInfoItem.qml  DefectView.qml  DropShadowRec.qml  FontInfo.qml  LabelBase.qml  MsgView.qml  PaneBase.qml  RadioDelegateBase.qml  SelectCursor.qml  SelectItemInfoView.qml  SelectRectangle.qml  SettingsBase.qml  SplitViewBase.qml  TimeText.qml
UI/AnimationTutorial/content/Comp/: DefecShowItemItem.qml  LabelFootInfoKey.qml  MaxImageComp.qml
UI/AnimationTutorial/content/Core/: Auth.qml  Control.qml  Core.qml  CoreControl.qml  CoreModel.qml  CoreSetting.qml  CoreSignal.qml  CoreStyle.qml  CoreTimer.qml  Global.qml  ImageCache.qml  Init.qml  LefeCore.qml  SurfaceData.qml  Tool.qml
UI/AnimationTutorial/content/DataShow/: CheckRecItem.qml  Data2DLayout.qml  Data3DLayout.qml  DataAreaLayout.qml  DataLayout.qml  DataShowItemSelectView.qml  DataShowLayout.qml  DataShowRootLayout.qml  DataShowRootView.qml  DataShowView.qml  MaskTool.qml  Watermark.qml
UI/AnimationTutorial/content/DefectPage/: DefectPageView.qml  DefectShowLayout.qml  LeftDataView.qml  RightViewList.qml
UI/AnimationTutorial/content/Dialogs/: Dialogs.qml
UI/AnimationTutorial/content/GlobalView/: GlobalErrorView.qml  GlobalServerMsg.qml
UI/AnimationTutorial/content/Graphs/: GraphsManage.qml
UI/AnimationTutorial/content/Input/: SimpleFileInput.qml  SimpleFolderInput.qml  TextFieldBase.qml
UI/AnimationTutorial/content/Labels/: BaseLabel.qml  DateTimeLab.qml  KeyLabel.qml  LabelBase.qml  LabelFootInfoValue.qml  TitleLabel.qml  ValueTextLabel.qml
UI/AnimationTutorial/content/Model/: AlarmItemInfo.qml  CoilCheck.qml  CoilModel.qml
UI/AnimationTutorial/content/PopupView/: PopManagement.qml  Pops.qml
UI/AnimationTutorial/content/Property/: DefectClassProperty.qml
UI/AnimationTutorial/content/SettingPage/: ConnectDialog.qml  SettingPageView.qml  ShowItemDelegate.qml
UI/AnimationTutorial/content/Style/: ColorRec.qml  SelectMenuItem.qml  StyleMenu.qml  TextColorMenuItem.qml
UI/AnimationTutorial/content/animation/: AnimErrorLabel.qml  AnimImage.qml  AnimListView.qml
UI/AnimationTutorial/content/btns/: AiBtn.qml  ItemDelegateBase.qml  MoreBtn.qml  MoreSet.qml  PingButton.qml  PreBtn.qml  RemoteControlButton.qml  RemoteControlButton.qml.autosave  SettingButton.qml  SwitchButton.qml  TextButton.qml  ToolBtn.qml
UI/AnimationTutorial/content/fonts/: LoadFont.qml  fonts.txt
UI/AnimationTutorial/content/types/: DateTime.qml  ScreenConfig.qml
UI/AnimationTutorial/imports/: CMakeLists.txt
UI/AnimationTutorial/imports/AnimationTutorial/: CMakeLists.txt  Constants.qml  qmldir
UI/AnimationTutorial/src/: consolecontroller.h  filedownloader.cpp  filedownloader.h  import_qml_plugins.h  main.cpp  scriptlauncher.cpp  scriptlauncher.h
UI/MotionStudio/: CMakeLists.txt  main.qml  qml.qrc  qtquickcontrols2.conf
UI/MotionStudio/content/: qmldir
UI/MotionStudio/content/Api/: Api_DataBase.qml
UI/MotionStudio/content/Base/: ButtonBase.qml  CheckBoxBase.qml  DropShadowBase.qml  DropShadowLabel.qml  DropShadowRec.qml  EffectImage.qml  MsgBgBase.qml  ScrollBarBase2.qml  SelectItem.qml  SplitViewBase.qml
UI/MotionStudio/content/Comp/: DefectRecView.qml
UI/MotionStudio/content/Core/: CoreGlobalError.qml  Init.qml
UI/MotionStudio/content/DataShow/: Data2DLayout.qml
UI/MotionStudio/content/Dialogs/: SaveFileDuialog.qml  SelectColorDialog.qml
UI/MotionStudio/content/Effects/: EffectsImage.qml
UI/MotionStudio/content/GlobalView/: GlobalServerMsg.qml
UI/MotionStudio/content/Labels/: BaseLabel.qml  LabelTitle.qml
UI/MotionStudio/content/Model/: CoilCheeck.qml
UI/MotionStudio/content/PopupView/: PopManagement.qml  Pops.qml
UI/MotionStudio/content/SettingPage/: SettingPageView.qml
UI/MotionStudio/content/animation/: AnimErrorImage.qml
UI/MotionStudio/content/btns/: AddButton.qml  BtnBase.qml  ColorItemDelegateButtonBase.qml  LabelButton.qml  ToolsButton.qml  WindowModelChangeButton.qml
UI/MotionStudio/content/types/: DateTime.qml
UI/MotionStudio/imports/: CMakeLists.txt
UI/MotionStudio/imports/MotionStudio/: CMakeLists.txt  (+2 more)
UI/MotionStudio/qml/: DefectShowRoot.qml  Junp.qml  ScreenView.qml
UI/MotionStudio/src/: consolecontroller.cpp  filedownloader.h  main.cpp
app/Server/rust_image_service/: Cargo.toml  README.md
package/CoilDataBase/: alembic.ini  selectAll.sql  setup.cfg  test.py
package/CoilDataBase/CoilDataBase/: Alarm.py  Coil.py  CoilSummary.py  Log.py  backup.py  coilTest.py  config.py  core.py  db_settings.py  migrate_mysql_to_postgres.py  migration_add_max_defect_fields.py  storage_policy.py  tool.py
package/CoilDataBase/CoilDataBase.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
package/CoilDataBase/migrations/: env.py
(+1451 files in other folders)
