[metadata]
name = CoilDataBase
version = 0.0.1
author = lcx
author_email = 1042815796@qq.com
description = CoilDataBase
long_description = README.md
long_description_content_type = text/markdown
url = https://github.com/a1112/CoilDataBase
license = GPL 3.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved ::  GPL 3.0
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    sqlalchemy
    pyyaml
    tqdm
    pyyaml

python_requires = >=3.6
[options.package_data]
* = *.dll