[package]
name = "motion_studio"
version = "0.1.0"
description = "LG 3D coil end-face inspection desktop shell"
authors = ["BKVision"]
edition = "2021"

[lib]
name = "motion_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
